[gd_scene load_steps=14 format=3 uid="uid://bq8rjxjltbv58"]

[ext_resource type="Script" path="res://Scripts/Knight/Buildings/archer_arrow_blue.gd" id="1_cq5q4"]
[ext_resource type="Texture2D" uid="uid://dpbkss3g5r0af" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Buildings/Tower/Tower_Blue.png" id="1_gm04j"]
[ext_resource type="Texture2D" uid="uid://d1w57dt7vdrtw" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Archer/Blue/Archer_Blue.png" id="2_rxywm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77iqn"]
size = Vector2(75, 33)

[sub_resource type="CircleShape2D" id="CircleShape2D_eftp6"]
radius = 400.0

[sub_resource type="Animation" id="Animation_xdrck"]
resource_name = "AttackDown"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [47, 48, 49, 50, 51, 52, 53, 54]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_pvwbx"]
resource_name = "AttackLeft"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcherSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_237e3"]
resource_name = "AttackRight"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcherSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_c3p46"]
resource_name = "AttackUp"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"create_arrow"
}]
}

[sub_resource type="Animation" id="Animation_26ep7"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcherSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h3tax"]
_data = {
"AttackDown": SubResource("Animation_xdrck"),
"AttackLeft": SubResource("Animation_pvwbx"),
"AttackRight": SubResource("Animation_237e3"),
"AttackUp": SubResource("Animation_c3p46"),
"Idle": SubResource("Animation_26ep7")
}

[sub_resource type="Animation" id="Animation_uisga"]
resource_name = "range"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RangeArea/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 400.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i5swo"]
_data = {
"range": SubResource("Animation_uisga")
}

[node name="ArcherTowerBlue" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_cq5q4")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 74.5)
shape = SubResource("RectangleShape2D_77iqn")

[node name="RangeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_eftp6")

[node name="TowerSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-1, 59)
texture = ExtResource("1_gm04j")
offset = Vector2(1, -61)

[node name="ArcherSprite" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -56)
texture = ExtResource("2_rxywm")
hframes = 8
vframes = 7
frame = 47

[node name="ArcherAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h3tax")
}
autoplay = "Idle"

[node name="ToolAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i5swo")
}
autoplay = "range"

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="ArrowMarker" type="Marker2D" parent="."]
position = Vector2(0, -40)

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-41, 116, 54, 122, 70, 35, -53, 47)

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
[connection signal="animation_finished" from="ToolAnimation" to="." method="_on_tool_animation_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
